--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
            </div>
 
            <div class="socials" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="1500" data-aos-anchor-placement="bottom-bottom">
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/victor-okpukpan" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/sasha.blackshire.1" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://twitter.com/victorokpukpan_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://instagram.com/victorokpukpan_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
            </div>
         </div>
     </section>
