--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <a href="https://www.linkedin.com/in/victor-okpukpan" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="https://www.facebook.com/sasha.blackshire.1" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="https://twitter.com/victorokpukpan_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://instagram.com/victorokpukpan_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/Victor-Okpukpan" target="_blank"><i class="fa-brands fa-github"></i></a>
            </div>
         </div>
     </section>
@@ -125,6 +125,7 @@
         </div>
     </section>
 
+    <!-- PORTFOLIO SECTION -->
     <section id="portfolio">
         <div class="heading">
             <h2>Projects</h2>
@@ -204,6 +205,7 @@
         </div>
     </section>
 
+    <!-- CONTACT SECTION -->
     <section id="contact">
         <div class="heading">
             <h2>GET IN TOUCH</h2>
@@ -286,16 +288,18 @@
         </div>
     </section>
 
+    <!-- FOOTER -->
     <footer>
         <p>Victor Okpukpan &copy All Rights Reserved</p>
     </footer>
 
-
+<!-- ANIMATE ON SCROLL LIBRARY -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
 
+<!-- JS SCRIPT -->
     <script src="./script.js"></script>
 </body>
 </html> 
