--- a/index.html
+++ b/index.html
@@ -96,6 +96,50 @@
                 </div>
             </div>
         </div>
+
+        <!-- SKILLS SECTION -->
+        <div id="skills">
+            <div class="heading">
+                <h2>Current Skills</h2>
+            </div>
+            <div class="bar-container">
+                <div class="radial-bars">
+                    
+                    <!-- BAR START -->
+                    <div class="radial-bar"  data-aos="fade-right" data-aos-duration="1200" data-aos-delay="500">
+                        <svg x="0px" y="0px" viewBox="0 0 200 200">
+                            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                            <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+                        </svg>
+                        <div class="percentage">90%</div>
+                        <div class="text">HTML</div>
+                    </div>
+                    <!-- BAR END -->
+
+                    <!-- BAR START -->
+                    <div class="radial-bar"  data-aos="fade-right" data-aos-duration="1200" data-aos-delay="500">
+                        <svg x="0px" y="0px" viewBox="0 0 200 200">
+                            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                            <circle class="path path-2" cx="100" cy="100" r="80"></circle>
+                        </svg>
+                        <div class="percentage">75%</div>
+                        <div class="text">CSS</div>
+                    </div>
+                    <!-- BAR END -->
+
+                    <!-- BAR START -->
+                    <div class="radial-bar"  data-aos="fade-right" data-aos-duration="1200" data-aos-delay="500">
+                        <svg x="0px" y="0px" viewBox="0 0 200 200">
+                            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                            <circle class="path path-3" cx="100" cy="100" r="80"></circle>
+                        </svg>
+                        <div class="percentage">60%</div>
+                        <div class="text">JAVASCRIPT</div>
+                    </div>
+                    <!-- BAR END -->
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- SERVICES PAGE -->
@@ -132,6 +176,7 @@
         </div>
 
         <div class="portfolio-wrapper">
+            <!-- FILTER NAVIGATION -->
             <div class="portfolio-nav">
                 <div class="filter">
                     <span class="filter-item active" data-filter="all">All</span>
@@ -141,7 +186,7 @@
             </div>
 
             <div class="portfolio-content">
-
+                <!-- PORTFOLIO PROJECT ITEM -->
                 <div class="portfolio-item email" data-aos="fade-right" data-aos-duration="1200">
                     <div class="portfolio-item-inner">
                         <img src="./images/taste.png" alt="">
@@ -151,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-
+                 <!-- PORTFOLIO PROJECT ITEM -->
                 <div class="portfolio-item website" data-aos="fade-right" data-aos-duration="1200">
                     <div class="portfolio-item-inner">
                         <img src="./images/taste.png" alt="">
@@ -161,7 +206,7 @@
                         </div>
                     </div>
                 </div>
-
+                 <!-- PORTFOLIO PROJECT ITEM -->
                 <div class="portfolio-item website" data-aos="fade-right" data-aos-duration="1200">
                     <div class="portfolio-item-inner">
                         <img src="./images/taste.png" alt="">
@@ -171,7 +216,7 @@
                         </div>
                     </div>
                 </div>
-
+                 <!-- PORTFOLIO PROJECT ITEM -->
                 <div class="portfolio-item website" data-aos="fade-right" data-aos-duration="1200">
                     <div class="portfolio-item-inner">
                         <img src="./images/taste.png" alt="">
@@ -181,7 +226,7 @@
                         </div>
                     </div>
                 </div>
-
+                 <!-- PORTFOLIO PROJECT ITEM -->
                 <div class="portfolio-item email" data-aos="fade-right" data-aos-duration="1200">
                     <div class="portfolio-item-inner">
                         <img src="./images/taste.png" alt="">
@@ -191,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-
+                 <!-- PORTFOLIO PROJECT ITEM -->
                 <div class="portfolio-item website" data-aos="fade-right" data-aos-duration="1200">
                     <div class="portfolio-item-inner">
                         <img src="./images/taste.png" alt="">
